hphp/test/zend/good/ext/standard/tests/general_functions/bug41518.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
$tmp_dir = __DIR__ . '/bug41518';
mkdir($tmp_dir);
if (!is_dir($tmp_dir)) {
  die("skip");
}
@unlink($tmp_dir);
}
